(feat)add customer CRM page
